<resources>
    <string name="app_name">ProyectoSemestre</string>
    <string name="btn_login">Ingresar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BoardDex</string>
    <string name="nav_header_subtitle">Para amantes de los BoardGames</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mis juegos</string>
    <string name="menu_slideshow">Mis logros</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_new_game">Agregar un juego</string>
    <string name="menu_maps">Tiendas cercanas</string>
    <string name="menu_home_welcome">Bienvenid@!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Sync email periodically</string>
</resources>