<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectosemestre.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyectosemestre.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectosemestre.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.proyectosemestre.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/newGameFragment"
        android:name="com.example.proyectosemestre.NewGameFragment"
        android:label="fragment_new_game"
        tools:layout="@layout/fragment_new_game" >
        <action
            android:id="@+id/action_newGameFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.proyectosemestre.HomeActivity"
        android:label="app_bar_home"
        tools:layout="@layout/app_bar_home" />
</navigation>